Bug fix: not-found error overflowing with monospace font

--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,6 @@ select:focus {
     font-style: italic;
     font-weight: 500;
     font-size: 1.5rem;
-    width: max-content;
     text-align: center;
 }
 
